Add auto-softdelete step to ingest
...assuming the correct ingest strategy is selected